se agrega tabla de logs y seguimiento y auditoria de los endpoints

--- a/OnlineCredits.Infrastructure/OnlineCredits.Infrastructure.csproj
+++ b/OnlineCredits.Infrastructure/OnlineCredits.Infrastructure.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OnlineCredits.Core\OnlineCredits.Core.csproj" />
+    <ProjectReference Include="..\OnlineCredits.Application\OnlineCredits.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
