se deja todo en local

--- a/OnlineCredits.API/OnlineCredits.API.csproj
+++ b/OnlineCredits.API/OnlineCredits.API.csproj
@@ -22,4 +22,11 @@
     <ProjectReference Include="..\OnlineCredits.Infrastructure\OnlineCredits.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="onlinecredits.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
