--- a/OnlineCredits.API/appsettings.json
+++ b/OnlineCredits.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=/data/onlinecredits.db"
+    "DefaultConnection": "Data Source=onlinecredits.db"
   },
   "Jwt": {
     "Key": "EstaEsUnaClaveSuperSecretaJWT1234567890",
